[package]
name = "OANotifier"
version = "1.5.4"
edition = "2021"
authors = ["luhanzhen"]
license = "GNU General Public License"
repository = "https://github.com/luhanzhen/OA_Notifier"
#description = "本软件用于自动提醒吉大OA更新内容。"


[dependencies]
#fltk = { version = "1.3.30", features = ["fltk-bundled"] }
fltk = "1.3.34"
fltk-sys = "1.3.34"
fltk-table = "0.3.0"
notify-rust = "4.8.0"
reqwest = {version = "0.11.17", features = ["blocking"]}
scraper = "0.12.0"
timer = "0.2.0"
chrono = "0.4.10"
webbrowser = "0.8.9"
tray-icon = "0.5.1"
single-instance = "0.3.3"
reachable = "0.2.2"

